Fix filter button alignment on small screens for Advanced Search panel (#8113)

--- a/src/Bootstrap/less/theme/page-list-packages.less
+++ b/src/Bootstrap/less/theme/page-list-packages.less
@@ -84,4 +84,10 @@
       margin-right: 10px;
     }
   }
+
+  @media (min-width: @screen-sm) {
+    .text-align-right {
+      text-align: right;
+    }
+  }
 }
